rename issues short name, unvotes vote number

--- a/dsaproject.ipynb
+++ b/dsaproject.ipynb
@@ -32,7 +32,20 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   rcid short_name\n",
+      "0    77  Palestine\n",
+      "1  9001  Palestine\n",
+      "2  9002  Palestine\n",
+      "3  9003  Palestine\n",
+      "4  9004  Palestine\n"
+     ]
+    }
+   ],
    "source": [
     "#data checks: issues\n",
     "\n",
@@ -57,14 +70,34 @@
     "# print(issues.duplicated(subset=['rcid', 'short_name']).sum()) # on rcid and short_name, no duplicates\n",
     "# print(issues['short_name'].unique()) #['me' 'nu' 'di' 'hr' 'co' 'ec']\n",
     "\n",
-    "issues = issues.drop(columns=['issue'])"
+    "map_issues = {'me': 'Palestine', 'nu': 'Nuclear', 'di': 'Arms', 'hr': 'Human Rights', 'co': 'Colonialism', 'ec': 'Economic Development'}\n",
+    "issues['short_name'] = issues['short_name'].replace(map_issues)\n",
+    "issues = issues.drop(columns=['issue'])\n",
+    "print(issues.head())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   rcid        country   country_code  vote\n",
+      "0     3  United States  United States     1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/3k/f7hjjv9x7tsc4ndc4kgz22y40000gn/T/ipykernel_82405/1030999329.py:16: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  unvotes['vote'] = unvotes['vote'].replace({'yes': 1, 'no': 2, 'abstain': 3})\n"
+     ]
+    }
+   ],
    "source": [
     "#data checks: unvotes\n",
     "\n",
@@ -81,6 +114,8 @@
     "# print(missing_country['country'].unique()) #['Yemen Arab Republic' 'Zanzibar' 'Federal Republic of Germany' 'Namibia']\n",
     "mapping = {'Yemen Arab Republic': 'YAR', 'Zanzibar': 'ZAN', 'Federal Republic of Germany': 'GER', 'Namibia': 'NAM'}\n",
     "unvotes['country_code'] = unvotes['country'].fillna(unvotes['country'].map(mapping))\n",
+    "unvotes['vote'] = unvotes['vote'].replace({'yes': 1, 'no': 2, 'abstain': 3})\n",
+    "print(unvotes.head(1))\n",
     "\n",
     "# print(unvotes.isna().sum()) #now country code has no missing values\n",
     "# print(unvotes.duplicated(subset=['rcid', 'country_code']).sum()) # on rcid and country_code, no duplicates"
