fix germany and yugoslavia and others

--- a/dsaproject.ipynb
+++ b/dsaproject.ipynb
@@ -111,6 +111,18 @@
     "# print(unvotes.isna().sum()) #country code has 7898 missing values \n",
     "\n",
     "missing_country = unvotes[unvotes['country_code'].isna()]\n",
+    "\n",
+    "unvotes['country_code'] = np.where(unvotes['country'] == 'Czechoslovakia', 'CS', unvotes['country_code'])\n",
+    "unvotes['country_code'] = np.where(unvotes['country'] == 'Yugoslavia', 'YU', unvotes['country_code'])\n",
+    "unvotes['country_code'] = np.where(unvotes['country'] == 'German Democratic Republic', 'DD', unvotes['country_code'])\n",
+    "unvotes['country_code'] = np.where(unvotes['country'] == \"Yemen People's Republic\", 'YD', unvotes['country_code'])\n",
+    "\n",
+    "unvotes['country'] = np.where(\n",
+    "    (unvotes['country'].notna()) & (unvotes['country'] == \"German Federal Republic\"),\n",
+    "    \"Federal Republic of Germany\",\n",
+    "    unvotes['country']\n",
+    ")\n",
+    "\n",
     "# print(missing_country['country'].unique()) #['Yemen Arab Republic' 'Zanzibar' 'Federal Republic of Germany' 'Namibia']\n",
     "mapping = {'Yemen Arab Republic': 'YAR', 'Zanzibar': 'ZAN', 'Federal Republic of Germany': 'GER', 'Namibia': 'NAM'}\n",
     "unvotes['country_code'] = unvotes['country'].fillna(unvotes['country'].map(mapping))\n",
@@ -166,7 +178,7 @@
     "pre_no_amend_para = pre_1985[['rcid', 'session', 'importantvote', 'date', 'unres', 'short', 'descr']]\n",
     "roll_calls_no_amend_para = pd.concat([pre_no_amend_para, post_1985], axis=0)\n",
     "# print(roll_calls_no_amend_para.shape) #(6202,7) \n",
-    "# print(roll_calls_no_amend_para.isna().sum()) #missing entries: 604 importantvote, 159 unres, 573 short, 1 descr\n"
+    "# print(roll_calls_no_amend_para.isna().sum()) #missing entries: 604 importantvote, 159 unres, 573 short, 1 descr"
    ]
   }
  ],
