--- a/dsaproject.ipynb
+++ b/dsaproject.ipynb
@@ -17,15 +17,15 @@
     "unvotes = pd.read_csv('../data/unvotes.csv', index_col = 0)\n",
     "\n",
     "# print(issues.head(2))\n",
-    "#print(issues.index) #'rcid' column\n",
+    "print(issues.index) #'rcid' column\n",
     "issues = issues.reset_index(drop=False)\n",
     "\n",
     "# print(roll_calls.head(2))\n",
-    "#print(roll_calls.index) #'rcid' column\n",
+    "print(roll_calls.index) #'rcid' column\n",
     "roll_calls = roll_calls.reset_index(drop=False)\n",
     "\n",
     "#print(unvotes.head(2))\n",
-    "# print(unvotes.index) #'rcid' column\n",
+    "print(unvotes.index) #'rcid' column\n",
     "unvotes = unvotes.reset_index(drop=False)"
    ]
   },
