create summary tables, fix unvotes

--- a/dsaproject.ipynb
+++ b/dsaproject.ipynb
@@ -2,9 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index([  77, 9001, 9002, 9003, 9004, 9005, 9006,  128,  129,  130,\n",
+      "       ...\n",
+      "       9127, 9128, 9135, 9142, 9136, 9145, 9069, 9074, 9095, 9092],\n",
+      "      dtype='int64', name='rcid', length=5745)\n",
+      "Index([   3,    4,    5,    6,    7,    8,    9,   10,   11,   12,\n",
+      "       ...\n",
+      "       9138, 9139, 9140, 9141, 9142, 9143, 9144, 9145, 9146, 9147],\n",
+      "      dtype='int64', name='rcid', length=6202)\n",
+      "Index([   3,    3,    3,    3,    3,    3,    3,    3,    3,    3,\n",
+      "       ...\n",
+      "       9101, 9101, 9101, 9101, 9101, 9101, 9101, 9101, 9101, 9101],\n",
+      "      dtype='int64', name='rcid', length=869937)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd \n",
@@ -31,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,22 +98,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   rcid        country   country_code  vote\n",
-      "0     3  United States  United States     1\n"
+      "   rcid        country country_code  vote\n",
+      "0     3  United States           US     1\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3k/f7hjjv9x7tsc4ndc4kgz22y40000gn/T/ipykernel_82606/1933603386.py:28: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/3k/f7hjjv9x7tsc4ndc4kgz22y40000gn/T/ipykernel_6764/2103063786.py:28: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  unvotes['vote'] = unvotes['vote'].replace({'yes': 1, 'no': 2, 'abstain': 3})\n"
      ]
     }
@@ -126,7 +145,7 @@
     "\n",
     "# print(missing_country['country'].unique()) #['Yemen Arab Republic' 'Zanzibar' 'Federal Republic of Germany' 'Namibia']\n",
     "mapping = {'Yemen Arab Republic': 'YAR', 'Zanzibar': 'ZAN', 'Federal Republic of Germany': 'GER', 'Namibia': 'NAM'}\n",
-    "unvotes['country_code'] = unvotes['country'].fillna(unvotes['country'].map(mapping))\n",
+    "unvotes['country_code'] = unvotes['country_code'].fillna(unvotes['country'].map(mapping))\n",
     "unvotes['vote'] = unvotes['vote'].replace({'yes': 1, 'no': 2, 'abstain': 3})\n",
     "print(unvotes.head(1))\n",
     "\n",
@@ -136,9 +155,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rcid               0\n",
+      "session            0\n",
+      "importantvote      0\n",
+      "date               0\n",
+      "unres            151\n",
+      "amend              0\n",
+      "para               0\n",
+      "short              0\n",
+      "descr              0\n",
+      "dtype: int64\n",
+      "rcid               0\n",
+      "session            0\n",
+      "importantvote    604\n",
+      "date               0\n",
+      "unres              8\n",
+      "short            573\n",
+      "descr              1\n",
+      "dtype: int64\n",
+      "Index(['rcid', 'session', 'importantvote', 'date', 'unres', 'amend', 'para',\n",
+      "       'short', 'descr'],\n",
+      "      dtype='object')\n",
+      "Index(['rcid', 'session', 'importantvote', 'date', 'unres', 'short', 'descr'], dtype='object')\n",
+      "Index(['rcid', 'session', 'importantvote', 'date', 'unres', 'short', 'descr'], dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
     "#data checks: roll_calls \n",
     "\n",
@@ -168,18 +217,73 @@
     "\n",
     "pre_1985 = roll_calls[roll_calls['date'].between('1946-01-01', '1984-12-31')].sort_values('date', ascending=True)\n",
     "# print(pre_1985.shape[0]) #2844\n",
-    "# print(pre_1985.isna().sum()) #all cleaned except for 151 missing entries for unres\n",
+    "#print(pre_1985.isna().sum()) #all cleaned except for 151 missing entries for unres\n",
     "\n",
+    "\"\"\" missing values:\n",
+    "rcid               0\n",
+    "session            0\n",
+    "importantvote      0\n",
+    "date               0\n",
+    "unres            151\n",
+    "amend              0\n",
+    "para               0\n",
+    "short              0\n",
+    "descr              0\n",
+    "\"\"\"\n",
     "\n",
     "post_1985 = roll_calls[roll_calls['date'].between('1985-01-01', '2020-01-01')].sort_values('date', ascending=True)\n",
     "post_1985 = post_1985.drop(columns=['amend', 'para'])\n",
     "# print(post_1985.head(1))\n",
-    "# print(post_1985.isna().sum()) #missing entries: 604 importantvote, 8 unres, 573 short, 1 descr\n",
+    "#print(post_1985.isna().sum()) #missing entries: 604 importantvote, 8 unres, 573 short, 1 descr\n",
+    "\n",
+    "\"\"\" missing values: \n",
+    "rcid               0\n",
+    "session            0\n",
+    "importantvote    604\n",
+    "date               0\n",
+    "unres              8\n",
+    "short            573\n",
+    "descr              1\n",
+    "\"\"\"\n",
     "\n",
     "pre_no_amend_para = pre_1985[['rcid', 'session', 'importantvote', 'date', 'unres', 'short', 'descr']]\n",
     "roll_calls_no_amend_para = pd.concat([pre_no_amend_para, post_1985], axis=0)\n",
     "# print(roll_calls_no_amend_para.shape) #(6202,7) \n",
-    "# print(roll_calls_no_amend_para.isna().sum()) #missing entries: 604 importantvote, 159 unres, 573 short, 1 descr"
+    "# print(roll_calls_no_amend_para.isna().sum()) #missing entries: 604 importantvote, 159 unres, 573 short, 1 descr\n",
+    "print(pre_1985.columns)\n",
+    "print(post_1985.columns)\n",
+    "print(roll_calls_no_amend_para.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At present we have the following tables: \n",
+    "\n",
+    "issues: \n",
+    "- rcid(int): voting number\n",
+    "- short_name(str): short name of issue \n",
+    "\n",
+    "unvotes: \n",
+    "- rcid(int): voting number\n",
+    "- country(str): long name of country\n",
+    "- country_code(str): short form identifier of country (2-3 characters)\n",
+    "- vote(int): 1 for yes, 2 for no, 3 for abstain\n",
+    "\n",
+    "3 tables from roll_calls: pre_1985, post_1985, roll_calls_no_amend_para\n",
+    "(pre_1985 includes amend, para, while post_1985 doesn't as it was depreciated then.) \n",
+    "(roll_calls_no_amend_para is the roll_calls table without the amend and para columns.)\n",
+    "\n",
+    "- rcid(int): voting number\n",
+    "- session(int): session number. 1 session can have multiple rcid/votes. \n",
+    "- importantvote(int): takes on 0, 1 or NA. <-- be careful! \n",
+    "- date(datetime object): date\n",
+    "- unres(str): a code for each vote. has NA values. \n",
+    "- amend(int): whether the vote is on an amendment. takes values 0 or 1\n",
+    "- para(int): whether the vote is on a paragraph. takes values 0 or 1\n",
+    "- short(str): short description\n",
+    "- descr(str): long description"
    ]
   }
  ],
