--- a/dsaproject.ipynb
+++ b/dsaproject.ipynb
@@ -113,7 +113,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3k/f7hjjv9x7tsc4ndc4kgz22y40000gn/T/ipykernel_6764/2103063786.py:28: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/3k/f7hjjv9x7tsc4ndc4kgz22y40000gn/T/ipykernel_7222/2103063786.py:28: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  unvotes['vote'] = unvotes['vote'].replace({'yes': 1, 'no': 2, 'abstain': 3})\n"
      ]
     }
@@ -155,39 +155,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rcid               0\n",
-      "session            0\n",
-      "importantvote      0\n",
-      "date               0\n",
-      "unres            151\n",
-      "amend              0\n",
-      "para               0\n",
-      "short              0\n",
-      "descr              0\n",
-      "dtype: int64\n",
-      "rcid               0\n",
-      "session            0\n",
-      "importantvote    604\n",
-      "date               0\n",
-      "unres              8\n",
-      "short            573\n",
-      "descr              1\n",
-      "dtype: int64\n",
-      "Index(['rcid', 'session', 'importantvote', 'date', 'unres', 'amend', 'para',\n",
-      "       'short', 'descr'],\n",
-      "      dtype='object')\n",
-      "Index(['rcid', 'session', 'importantvote', 'date', 'unres', 'short', 'descr'], dtype='object')\n",
-      "Index(['rcid', 'session', 'importantvote', 'date', 'unres', 'short', 'descr'], dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#data checks: roll_calls \n",
     "\n",
@@ -219,7 +189,8 @@
     "# print(pre_1985.shape[0]) #2844\n",
     "#print(pre_1985.isna().sum()) #all cleaned except for 151 missing entries for unres\n",
     "\n",
-    "\"\"\" missing values:\n",
+    "\"\"\" \n",
+    "missing values:\n",
     "rcid               0\n",
     "session            0\n",
     "importantvote      0\n",
@@ -236,7 +207,7 @@
     "# print(post_1985.head(1))\n",
     "#print(post_1985.isna().sum()) #missing entries: 604 importantvote, 8 unres, 573 short, 1 descr\n",
     "\n",
-    "\"\"\" missing values: \n",
+    "\"\"\"\n",
     "rcid               0\n",
     "session            0\n",
     "importantvote    604\n",
@@ -249,39 +220,36 @@
     "pre_no_amend_para = pre_1985[['rcid', 'session', 'importantvote', 'date', 'unres', 'short', 'descr']]\n",
     "roll_calls_no_amend_para = pd.concat([pre_no_amend_para, post_1985], axis=0)\n",
     "# print(roll_calls_no_amend_para.shape) #(6202,7) \n",
-    "# print(roll_calls_no_amend_para.isna().sum()) #missing entries: 604 importantvote, 159 unres, 573 short, 1 descr\n",
-    "print(pre_1985.columns)\n",
-    "print(post_1985.columns)\n",
-    "print(roll_calls_no_amend_para.columns)"
+    "# print(roll_calls_no_amend_para.isna().sum()) #missing entries: 604 importantvote, 159 unres, 573 short, 1 descr"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At present we have the following tables: \n",
+    "At present, we have the following tables: \n",
     "\n",
-    "issues: \n",
+    "issues: --> what kinds of issues are present\n",
     "- rcid(int): voting number\n",
-    "- short_name(str): short name of issue \n",
+    "- short_name(str): type of issue \n",
     "\n",
-    "unvotes: \n",
+    "unvotes: --> how each country voted on each vote\n",
     "- rcid(int): voting number\n",
-    "- country(str): long name of country\n",
-    "- country_code(str): short form identifier of country (2-3 characters)\n",
+    "- country(str): country name\n",
+    "- country_code(str): short name of country (2-3 characters)\n",
     "- vote(int): 1 for yes, 2 for no, 3 for abstain\n",
     "\n",
-    "3 tables from roll_calls: pre_1985, post_1985, roll_calls_no_amend_para\n",
-    "(pre_1985 includes amend, para, while post_1985 doesn't as it was depreciated then.) \n",
-    "(roll_calls_no_amend_para is the roll_calls table without the amend and para columns.)\n",
+    "from the roll calls table we have 3 tables: pre_1985, post_1985, roll_calls_no_amend_para\n",
+    "- amend and para were depreciated from 1985. pre_1985 contains them, post_1985 does not. \n",
+    "- roll_calls_no_amend_para is the roll_calls table without those 2 columns \n",
     "\n",
     "- rcid(int): voting number\n",
-    "- session(int): session number. 1 session can have multiple rcid/votes. \n",
-    "- importantvote(int): takes on 0, 1 or NA. <-- be careful! \n",
-    "- date(datetime object): date\n",
-    "- unres(str): a code for each vote. has NA values. \n",
-    "- amend(int): whether the vote is on an amendment. takes values 0 or 1\n",
-    "- para(int): whether the vote is on a paragraph. takes values 0 or 1\n",
+    "- session(int): session number, one number can have a lot of votes\n",
+    "- importantvote(int): takes values 0, 1 or NA\n",
+    "- date(DateTime): date\n",
+    "- unres(str): voting code. has missing values. \n",
+    "- amend(str): whether vote is on amendment.\n",
+    "- para(str): whether vote is on a paragraph\n",
     "- short(str): short description\n",
     "- descr(str): long description"
    ]
