change unvotes vote back to yes no abstain

--- a/dsaproject.ipynb
+++ b/dsaproject.ipynb
@@ -146,7 +146,6 @@
     "# print(missing_country['country'].unique()) #['Yemen Arab Republic' 'Zanzibar' 'Federal Republic of Germany' 'Namibia']\n",
     "mapping = {'Yemen Arab Republic': 'YAR', 'Zanzibar': 'ZAN', 'Federal Republic of Germany': 'GER', 'Namibia': 'NAM'}\n",
     "unvotes['country_code'] = unvotes['country_code'].fillna(unvotes['country'].map(mapping))\n",
-    "unvotes['vote'] = unvotes['vote'].replace({'yes': 1, 'no': 2, 'abstain': 3})\n",
     "print(unvotes.head(1))\n",
     "\n",
     "# print(unvotes.isna().sum()) #now country code has no missing values\n",
@@ -237,7 +236,7 @@
     "- rcid(int): voting number\n",
     "- country(str): country name\n",
     "- country_code(str): short name of country (2-3 characters)\n",
-    "- vote(int): 1 for yes, 2 for no, 3 for abstain\n",
+    "- vote(str): [yes, no, abstain]\n",
     "\n",
     "from the roll calls table we have 3 tables: pre_1985, post_1985, roll_calls_no_amend_para\n",
     "- amend and para were depreciated from 1985. pre_1985 contains them, post_1985 does not. \n",
