--- a/dsaproject.ipynb
+++ b/dsaproject.ipynb
@@ -2,9 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index([  77, 9001, 9002, 9003, 9004, 9005, 9006,  128,  129,  130,\n",
+      "       ...\n",
+      "       9127, 9128, 9135, 9142, 9136, 9145, 9069, 9074, 9095, 9092],\n",
+      "      dtype='int64', name='rcid', length=5745)\n",
+      "Index([   3,    4,    5,    6,    7,    8,    9,   10,   11,   12,\n",
+      "       ...\n",
+      "       9138, 9139, 9140, 9141, 9142, 9143, 9144, 9145, 9146, 9147],\n",
+      "      dtype='int64', name='rcid', length=6202)\n",
+      "Index([   3,    3,    3,    3,    3,    3,    3,    3,    3,    3,\n",
+      "       ...\n",
+      "       9101, 9101, 9101, 9101, 9101, 9101, 9101, 9101, 9101, 9101],\n",
+      "      dtype='int64', name='rcid', length=869937)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd \n",
@@ -31,7 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +120,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3k/f7hjjv9x7tsc4ndc4kgz22y40000gn/T/ipykernel_82606/1933603386.py:28: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/dz/_v4lhwgd4xz3b039y7fg424w0000gn/T/ipykernel_67777/1933603386.py:28: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  unvotes['vote'] = unvotes['vote'].replace({'yes': 1, 'no': 2, 'abstain': 3})\n"
      ]
     }
@@ -199,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
