--- a/dsaproject.ipynb
+++ b/dsaproject.ipynb
@@ -250,7 +250,8 @@
     "- amend(str): whether vote is on amendment.\n",
     "- para(str): whether vote is on a paragraph\n",
     "- short(str): short description\n",
-    "- descr(str): long description"
+    "- descr(str): long description\n",
+    "\n"
    ]
   }
  ],
