correlation score of country vote to actual outcome

--- a/dsaproject.ipynb
+++ b/dsaproject.ipynb
@@ -105,16 +105,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   rcid        country country_code  vote\n",
-      "0     3  United States           US     1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/3k/f7hjjv9x7tsc4ndc4kgz22y40000gn/T/ipykernel_7222/2103063786.py:28: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  unvotes['vote'] = unvotes['vote'].replace({'yes': 1, 'no': 2, 'abstain': 3})\n"
+      "   rcid        country country_code vote\n",
+      "0     3  United States           US  yes\n"
      ]
     }
    ],
@@ -250,8 +242,47 @@
     "- amend(str): whether vote is on amendment.\n",
     "- para(str): whether vote is on a paragraph\n",
     "- short(str): short description\n",
-    "- descr(str): long description\n",
-    "\n"
+    "- descr(str): long description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of countries: 200\n",
+      "            country  correlation_score\n",
+      "37          Vietnam               0.90\n",
+      "100           China               0.85\n",
+      "107     Afghanistan               0.85\n",
+      "131            Cuba               0.80\n",
+      "151          Russia               0.67\n",
+      "192  United Kingdom               0.47\n",
+      "193          France               0.47\n",
+      "198   United States               0.32\n"
+     ]
+    }
+   ],
+   "source": [
+    "#update unvotes with a column on whether the vote passed or failed\n",
+    "yes_ratio = ((unvotes['vote'] == 'yes').groupby(unvotes['rcid']).mean())\n",
+    "unvotes['result'] = unvotes['rcid'].map(yes_ratio >= 0.5).replace({True: 'pass', False: 'fail'})\n",
+    "\n",
+    "true_positive_negative = ((unvotes['vote'] == 'yes') & (unvotes['result'] == 'pass') |\n",
+    "                           (unvotes['vote'] == 'no') & (unvotes['result'] == 'fail')) #returns a Boolean series for each row\n",
+    "correlation_table = true_positive_negative.groupby(unvotes['country']).mean().reset_index(drop=False).rename(columns={0: 'correlation_score'}).sort_values('correlation_score', ascending=False)\n",
+    "correlation_table['correlation_score'] = round(correlation_table['correlation_score'], 2)\n",
+    "correlation_table = correlation_table.reset_index(drop=True)\n",
+    "print(f\"Number of countries: {len(correlation_table)}\")\n",
+    "\n",
+    "countries_of_interest = ['United States', 'China', 'United Kingdom', 'Russia', 'France', 'Cuba', 'Afghanistan', 'Vietnam']\n",
+    "filtered_table = correlation_table[correlation_table['country'].isin(countries_of_interest)]\n",
+    "\n",
+    "print(filtered_table)"
    ]
   }
  ],
