success rate sorted by issue

--- a/dsaproject.ipynb
+++ b/dsaproject.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -50,20 +50,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   rcid short_name\n",
-      "0    77  Palestine\n",
-      "1  9001  Palestine\n",
-      "2  9002  Palestine\n",
-      "3  9003  Palestine\n",
-      "4  9004  Palestine\n"
+      "      rcid            short_name\n",
+      "3008     6          Human Rights\n",
+      "4980     8  Economic Development\n",
+      "4023    11           Colonialism\n",
+      "4981    11  Economic Development\n",
+      "4982    18  Economic Development\n",
+      "['Human Rights' 'Economic Development' 'Colonialism' 'Palestine' 'Arms'\n",
+      " 'Nuclear']\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nsome rcids don't have issue tags, some have multiple\\n\""
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -92,8 +104,13 @@
     "\n",
     "map_issues = {'me': 'Palestine', 'nu': 'Nuclear', 'di': 'Arms', 'hr': 'Human Rights', 'co': 'Colonialism', 'ec': 'Economic Development'}\n",
     "issues['short_name'] = issues['short_name'].replace(map_issues)\n",
-    "issues = issues.drop(columns=['issue'])\n",
-    "print(issues.head())"
+    "issues = issues.drop(columns=['issue']).sort_values('rcid') \n",
+    "print(issues.head()) \n",
+    "print(issues['short_name'].unique())\n",
+    "\n",
+    "\"\"\"\n",
+    "some rcids don't have issue tags, some have multiple\n",
+    "\"\"\""
    ]
   },
   {
@@ -247,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -257,6 +274,7 @@
       "Number of countries: 200\n",
       "            country  correlation_score\n",
       "37          Vietnam               0.90\n",
+      "73        Singapore               0.88\n",
       "100           China               0.85\n",
       "107     Afghanistan               0.85\n",
       "131            Cuba               0.80\n",
@@ -268,21 +286,123 @@
     }
    ],
    "source": [
+    "#Question: Which countries' votes are most correlated to the overall vote passing? Which country has the highest \"success rate\"\n",
+    "\n",
     "#update unvotes with a column on whether the vote passed or failed\n",
     "yes_ratio = ((unvotes['vote'] == 'yes').groupby(unvotes['rcid']).mean())\n",
     "unvotes['result'] = unvotes['rcid'].map(yes_ratio >= 0.5).replace({True: 'pass', False: 'fail'})\n",
     "\n",
+    "#merge with short_name column on issues df\n",
     "true_positive_negative = ((unvotes['vote'] == 'yes') & (unvotes['result'] == 'pass') |\n",
     "                           (unvotes['vote'] == 'no') & (unvotes['result'] == 'fail')) #returns a Boolean series for each row\n",
+    "\n",
+    "\n",
+    "#obtain correlation score by country across all issues, across all time\n",
     "correlation_table = true_positive_negative.groupby(unvotes['country']).mean().reset_index(drop=False).rename(columns={0: 'correlation_score'}).sort_values('correlation_score', ascending=False)\n",
     "correlation_table['correlation_score'] = round(correlation_table['correlation_score'], 2)\n",
     "correlation_table = correlation_table.reset_index(drop=True)\n",
     "print(f\"Number of countries: {len(correlation_table)}\")\n",
     "\n",
-    "countries_of_interest = ['United States', 'China', 'United Kingdom', 'Russia', 'France', 'Cuba', 'Afghanistan', 'Vietnam']\n",
+    "countries_of_interest = ['United States', 'China', 'United Kingdom', 'Russia', 'France', 'Cuba', 'Afghanistan', 'Vietnam', 'Singapore']\n",
     "filtered_table = correlation_table[correlation_table['country'].isin(countries_of_interest)]\n",
     "\n",
     "print(filtered_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            country  correlation_score         issue\n",
+      "5             China               0.84  Human Rights\n",
+      "70          Vietnam               0.81  Human Rights\n",
+      "94           France               0.80  Human Rights\n",
+      "115          Russia               0.80  Human Rights\n",
+      "128     Afghanistan               0.80  Human Rights\n",
+      "133   United States               0.79  Human Rights\n",
+      "162  United Kingdom               0.79  Human Rights\n",
+      "175            Cuba               0.79  Human Rights\n",
+      "185       Singapore               0.78  Human Rights\n",
+      "            country  correlation_score                 issue\n",
+      "43            China               0.83  Economic Development\n",
+      "89    United States               0.81  Economic Development\n",
+      "107            Cuba               0.81  Economic Development\n",
+      "110       Singapore               0.80  Economic Development\n",
+      "123          Russia               0.80  Economic Development\n",
+      "126  United Kingdom               0.80  Economic Development\n",
+      "136         Vietnam               0.80  Economic Development\n",
+      "165     Afghanistan               0.79  Economic Development\n",
+      "173          France               0.78  Economic Development\n",
+      "            country  correlation_score        issue\n",
+      "7             China               0.85  Colonialism\n",
+      "47          Vietnam               0.82  Colonialism\n",
+      "81        Singapore               0.81  Colonialism\n",
+      "125          Russia               0.80  Colonialism\n",
+      "146            Cuba               0.79  Colonialism\n",
+      "157   United States               0.79  Colonialism\n",
+      "162          France               0.79  Colonialism\n",
+      "185     Afghanistan               0.77  Colonialism\n",
+      "190  United Kingdom               0.77  Colonialism\n",
+      "            country  correlation_score      issue\n",
+      "22            China               0.84  Palestine\n",
+      "58             Cuba               0.83  Palestine\n",
+      "82           France               0.82  Palestine\n",
+      "108   United States               0.82  Palestine\n",
+      "127       Singapore               0.81  Palestine\n",
+      "150          Russia               0.81  Palestine\n",
+      "167     Afghanistan               0.80  Palestine\n",
+      "174         Vietnam               0.80  Palestine\n",
+      "183  United Kingdom               0.79  Palestine\n",
+      "            country  correlation_score issue\n",
+      "28    United States               0.83  Arms\n",
+      "43             Cuba               0.83  Arms\n",
+      "45        Singapore               0.83  Arms\n",
+      "57          Vietnam               0.82  Arms\n",
+      "108           China               0.81  Arms\n",
+      "115     Afghanistan               0.81  Arms\n",
+      "121          Russia               0.81  Arms\n",
+      "183          France               0.78  Arms\n",
+      "184  United Kingdom               0.78  Arms\n",
+      "            country  correlation_score    issue\n",
+      "40          Vietnam               0.83  Nuclear\n",
+      "52             Cuba               0.83  Nuclear\n",
+      "60    United States               0.82  Nuclear\n",
+      "74        Singapore               0.82  Nuclear\n",
+      "91            China               0.82  Nuclear\n",
+      "118          Russia               0.81  Nuclear\n",
+      "166     Afghanistan               0.79  Nuclear\n",
+      "181  United Kingdom               0.78  Nuclear\n",
+      "189          France               0.76  Nuclear\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Question: For each issue, which country has the highest \"success rate\" in voting? \n",
+    "\n",
+    "#find the rcids for each issue \n",
+    "mapping = {}\n",
+    "for _, row in issues.iterrows(): \n",
+    "    if row['short_name'] not in mapping.keys(): \n",
+    "        mapping[row['short_name']] = [row['rcid']]\n",
+    "    else: \n",
+    "        mapping[row['short_name']].append(row['rcid'])\n",
+    "\n",
+    "def get_top_correlations(subgroup, issue): #assumes that each dataframe has already been filtered by issue; subgroup is a DataFrame \n",
+    "    correlation_table = true_positive_negative.groupby(subgroup['country']).mean().reset_index(drop=False).rename(columns={0: 'correlation_score'}).sort_values('correlation_score', ascending=False)\n",
+    "    correlation_table['correlation_score'] = round(correlation_table['correlation_score'], 2)\n",
+    "    correlation_table = correlation_table.reset_index(drop=True)\n",
+    "    correlation_table['issue'] = issue\n",
+    "    return correlation_table\n",
+    "\n",
+    "for key, value in mapping.items(): \n",
+    "    df = unvotes[unvotes['rcid'].isin(value)]\n",
+    "    correlation_by_issue = get_top_correlations(df, key)\n",
+    "    print(correlation_by_issue[correlation_by_issue['country'].isin(countries_of_interest)])\n"
    ]
   }
  ],
